Adcionado git ignore e mudanças no front end

--- a/BlazorMangas/Layout/NavMenu.razor
+++ b/BlazorMangas/Layout/NavMenu.razor
@@ -27,7 +27,7 @@
 
          <AuthorizeView>
             <Authorized>
-                <MangasCategoriaNavMenu></MangasCategoriaNavMenu>
+                @* <MangasCategoriaNavMenu></MangasCategoriaNavMenu> *@
             </Authorized>
             <NotAuthorized>
             </NotAuthorized>
