--- a/BlazorMangas/Pages/Autentica/NotAuthorized.razor
+++ b/BlazorMangas/Pages/Autentica/NotAuthorized.razor
@@ -1,5 +1,4 @@
-<h3>NotAuthorized</h3>
+﻿@page "/notauthorized"
+@using BlazorMangas.Shared
 
-@code {
-    
-}
+<DisplayMessage ErrorMessage="Usuário Não Autorizado" />
