--- a/BlazorMangas/Layout/MainLayout.razor
+++ b/BlazorMangas/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using BlazorMangas.Pages.Autentica
+@inherits LayoutComponentBase
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -6,9 +8,9 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <LoginDisplay />
+            <a href="https://www.macoratti.net/" target="_blank">Macoratti.net</a>
         </div>
-
         <article class="content px-4">
             @Body
         </article>
