Adcionado AddHttpMessageHandler no cabecario do header de autenticação

--- a/BlazorMangas/_Imports.razor
+++ b/BlazorMangas/_Imports.razor
@@ -15,5 +15,6 @@
 @using BlazorMangas.Models.DTOs
 @using BlazorMangas.Models
 @using BlazorMangas.Models.Enums
+@using BlazorMangas.Shared
 
 @using System.Net.Http.Headers;
