Index do manga concluida

--- a/BlazorMangas/_Imports.razor
+++ b/BlazorMangas/_Imports.razor
@@ -9,6 +9,7 @@
 @using BlazorMangas
 @using BlazorMangas.Layout
 @using BlazorMangas.Services
+@using BlazorMangas.Services.API
 @using System.Reflection
 @using Microsoft.AspNetCore.Components.Authorization
 @using BlazorMangas.Services.Autentica
