Finalizado parte de crus do manga

--- a/BlazorMangas/Pages/Categorias/Categorias.razor
+++ b/BlazorMangas/Pages/Categorias/Categorias.razor
@@ -1,5 +1,5 @@
 ﻿@page "/categorias"
-@using BlazorMangas.Services.API
+@using BlazorMangas.Services.Api
 @using BlazorMangas.Shared
 @inject ICategoriaService _categoriaService
 @inject NavigationManager NavigationManager
