--- a/BlazorMangas/_Imports.razor
+++ b/BlazorMangas/_Imports.razor
@@ -9,7 +9,7 @@
 @using BlazorMangas
 @using BlazorMangas.Layout
 @using BlazorMangas.Services
-@using BlazorMangas.Services.API
+@using BlazorMangas.Services.Api
 @using System.Reflection
 @using Microsoft.AspNetCore.Components.Authorization
 @using BlazorMangas.Services.Autentica
