--- a/BlazorMangas/Pages/Mangas/MangaForm.razor
+++ b/BlazorMangas/Pages/Mangas/MangaForm.razor
@@ -137,7 +137,7 @@
     private string? imagemUrl;
     private string? imageType;
     long maxFileSize = 1024 * 500;
-    private string ApiImagens = "https://localhost:7020/images/";
+    private string ApiImagens = "http://localhost:5094/images/";
 
     [Inject]
     private NavigationManager? navigation { get; set; }
